<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Popcorn Time Remote</string>
    <string name="subtitles">Subtitles</string>
    <string name="disable_subs">Disable subtitles</string>

    <string name="no_connection">No connection</string>
    <string name="no_connection_desc">We could not connect to the selected Popcorn Time instance, make sure Popcorn Time (v0.3.3+) is running and check your settings and internet connection.</string>
    <string name="not_working_versions">Please note that Popcorn Time 0.3.6 does not have a working remote option.</string>
    <string name="retry">Retry</string>
    <string name="now_playing">Now playing</string>
    <string name="loading">Popcorn Time is loading data…</string>

    <string name="minutes">min</string>
    <string name="watch_trailer">Watch trailer</string>

    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="toggle_tabs">Toggle tabs</string>
    <string name="add_favourite">Add to favourites</string>
    <string name="remove_favourite">Remove from favourites</string>
    <string name="watched">Toggle watched</string>
    <string name="fullscreen">Toggle fullscreen</string>
    <string name="search">Search</string>
    <string name="subs">Select subtitles</string>
    <string name="player">Select video player</string>
    <string name="quality">Toggle quality</string>
    <string name="next_season">Next season</string>
    <string name="prev_season">Previous season</string>
    <string name="forward">Seek forward</string>
    <string name="backward">Seek backward</string>
    <string name="fastforward">Fast seek forward</string>
    <string name="fastbackward">Fast seek backward</string>

    <string name="no_instances">Add a new instance to start using Popcorn Time Remote</string>
    <string name="add_instance">Add instance</string>
    <string name="edit_instance">Edit instance</string>
    <string name="delete_instance">Delete instance</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ip">IP Address</string>
    <string name="name">Name</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_manually">Enter settings manually</string>
    <string name="scan_qr">Scan easy pairing QR</string>
    <string name="easy_pairing">Easy pairing is available in Popcorn Time v0.3.4 and higher. Open the advanced settings and generate your QR code in the \'remote control\' section.</string>


    <string name="donation_action">Donate</string>
    <string name="donation_title">Donate to developer</string>
    <string name="donation_info"><![CDATA[
        Popcorn Time Remote is a free and <a style="color:#1976D2" href="https://github.com/se-bastiaan/PopcornTimeRemote-Android">open-source</a> app.
        You can show your appreciation and support development by donating:
    ]]></string>

    <string name="donation_item_label" translatable="false">﹩%1$s</string>
    <string name="donation_item_bought">You\'ve donated for this item already.</string>

    <string name="donation_1">An ice cream</string>
    <string name="donation_4">Cup of coffee</string>
    <string name="donation_10">Electricity bills</string>
    <string name="donation_20">The right pillow</string>
    <string name="donation_50">Solid-state drive</string>
    <string name="donation_99">Sound system</string>

    <string name="donation_error_iab_setup">Failed to setup in-app-billing service!</string>
    <string name="donation_no_responsibility">Notice that Google is not responsible for that payments method.</string>

    <string name="slideone_title">Welcome to Popcorn Time Remote</string>
    <string name="slideone_text">This app allows you to remote control Popcorn Time on your computer.</string>

    <string name="slidetwo_title">Are you using the right version?</string>
    <string name="slidetwo_text">First, please make sure your Popcorn Time version was downloaded from https://popcorntime.io/.</string>

    <string name="slidethree_title">Enabling advanced settings</string>
    <string name="slidethree_text">To add a new instance, open the settings in Popcorn Time and check \'show advanced settings\'.</string>

    <string name="slidefour_title">Finding the remote section</string>
    <string name="slidefour_text">Now that the advanced settings are enabled you need to find the \'remote control\' section.</string>

    <string name="slidefive_title">Adding a new instance</string>
    <string name="slidefive_text">Press the \'+\' button in the overview screen of this app to add a new instance using the information in the \'remote control\' section of the Popcorn Time settings.</string>

    <string name="slidesix_title">Done!</string>
    <string name="slidesix_text">You can now remotely control your Popcorn Time!\n\nProblems? Post on the Popcorn Time forum to get help:\nhttps://discuss.popcorntime.io</string>

</resources>
