<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/no_connection_desc" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/contentText"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/no_connection"
        android:textSize="21sp" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/contentText"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/retry" />

</RelativeLayout>