<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <eu.se_bastiaan.popcorntimeremote.widget.JoystickView
        android:id="@+id/joystick"
        android:layout_centerInParent="true"
        android:layout_height="200dp"
        android:layout_width="200dp" />

    <eu.se_bastiaan.popcorntimeremote.widget.ImageButton
        android:id="@+id/upButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/joystick"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_up"
        android:contentDescription="@string/up" />

    <eu.se_bastiaan.popcorntimeremote.widget.ImageButton
        android:id="@+id/downButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/circle"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_down"
        android:contentDescription="@string/down" />

    <eu.se_bastiaan.popcorntimeremote.widget.ImageButton
        android:id="@+id/rightButton"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/circle"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_right"
        android:contentDescription="@string/right" />

    <eu.se_bastiaan.popcorntimeremote.widget.ImageButton
        android:id="@+id/leftButton"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/circle"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_left"
        android:contentDescription="@string/left" />

    <View
        android:id="@+id/circle"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circle" />

</RelativeLayout>